Fixed images position on tablet version

--- a/css/shop.css
+++ b/css/shop.css
@@ -82,7 +82,7 @@
         grid-template-columns: 1fr 1fr;
     }
     .shop__view-all {
-        grid-column: span 3;
+        grid-column: span 2;
         justify-self: center;
     }
 }
